2011-12-06
dmg packages are no longer built by default, but only when the --dmg argument is passed.

2011-12-05
First Release