@@ -1,3 +1,6 @@
+2011-12-06b
+Removed hardcoded condition for Portfile, so that the script doesn't fail if there is a revision bump from macports. 
+
 2011-12-06
 dmg packages are no longer built by default, but only when the --dmg argument is passed.
 
